--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- <meta property="og:image:url" content="https://static.tkbcdn.com/static-page/img/BelgianBeer_fb_thumb.jpg" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="/static/index.css">
+  <link rel="stylesheet" href="./static/index.css">
 
   <!-- Custom CSS -->
   <!--[if lt IE 9]>
