--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
       </div>
     </section>
     <section class="binh-chon">
-      <img class="pc" src="./static/images/binh-chon.svg" style="max-width: 100%; width: 100%" alt="">
+      <img class="pc" src="./static/images/binh-chon.png" style="max-width: 100%; width: 100%" alt="">
       <div class="container">
         <img class="mobile" src="./static/images/binh-chon-mb.svg" style="width: 100%;height: auto;" />
        </div>
@@ -585,7 +585,7 @@
     </section>
     <section class="taitro">
       <div class="pc">
-        <img src="./static/images/tai-tro-pc.png" style="max-width: 100%; width: 100%" alt="">
+        <img src="./static/images/tai-tro-pc.svg" style="max-width: 100%; width: 100%" alt="">
       </div>
       <img class="mobile" src="./static/images/tai-tro-mb.png" style="width: 100%;height: auto;" />
     </section>
