--- a/index.html
+++ b/index.html
@@ -461,11 +461,16 @@
           </p>
         </div>
       </div>
-      <img class="mobile" src="./static/images/doi-tuong-mobile.png" style="width: 100%;height: auto;" /> 
+      <img class="mobile" src="./static/images/doi-tuong-mb.svg" style="width: 100%;height: auto;" /> 
       <img class="mobile" src="./static/images/lich-dien-mb.png" style="width: 100%;height: auto; padding: 24px 0px;" /> 
     </section>
     <section id="chuong-trinh" class="chuong-trinh">
-      <img src="./static/images/ct-title.png" style="max-width: 100%; width: 100%" />
+      <div class="pc">
+        <img src="./static/images/ct-title.png" style="max-width: 100%; width: 100%" />
+      </div>
+      <div class="mobile">
+        <img src="./static/images/ct-title-mb.png" style="max-width: 100%; width: 100%" />
+      </div>
       <img src="./static/images/ct-banner.png" style="max-width: 100%; width: 100%" />
       <img src="./static/images/thao-luan.png" style="max-width: 100%; width: 100%" class="pc"/>
       <img class="mobile" src="./static/images/chuong-trinh-1-mb.png" style="width: 100%;height: auto;" /> 
