--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
     </header>
     <section class="banner">
       <a href="#booking"  class="booking-btn">MỜI ĐẶT VÉ TẠI ĐÂY</a>
-      <img class="pc" src="./static/images/Header.png" style="max-width: 100%; width: 100%" />
-      <img class="mobile" src="./static/images/banner-mobile.png" style="width: 100%;height: auto;" />
+      <img class="pc" src="./static/images/Header.svg" style="max-width: 100%; width: 100%" />
+      <img class="mobile" src="./static/images/banner-mobile.svg" style="width: 100%;height: auto;" />
     </section>
     <section id="gt" class="gt">
       <img class="mobile" src="./static/images/gt-mobile.png" style="width: 100%;height: auto;" alt="">
@@ -486,7 +486,9 @@
         <div class="pc" style="display: flex;">
           <img  src="./static/images/dien-title2.png" style="max-width: 100%; margin: auto;" class="title" />
         </div>
-        <img class="mobile" src="./static/images/dien-gia-mb.png" style="width: 100%; height: auto;" class="dien-gia-title" />
+        <div class="container">
+          <img class="mobile" src="./static/images/dien-gia-mb.svg" style="width: 100%; height: auto;" class="dien-gia-title" />
+        </div>
       </div>
       <div class="dien-gia-list pc">
         <div class="container">
@@ -592,7 +594,7 @@
       <div class="pc">
         <img src="./static/images/tai-tro-pc.svg" style="max-width: 100%; width: 100%" alt="">
       </div>
-      <img class="mobile" src="./static/images/tai-tro-mb.png" style="width: 100%;height: auto;" />
+      <img class="mobile" src="./static/images/tai-tro-mb.svg" style="width: 100%;height: auto;" />
     </section>
     <section class="footer">
       <div class="container">
