--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <a href="#booking" class="menu-link ">thông tin vé</a>
           </div>
         </div>
-        <nav class="navbar navbar-dark ">
+        <nav style="margin: 0;" class="navbar navbar-dark ">
           <img class="mobile" src="./static/images/icon.svg" style="max-width: 100%;margin-right: auto;padding-left: 24px;" />
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -468,20 +468,20 @@
       <div class="pc">
         <img src="./static/images/ct-title.png" style="max-width: 100%; width: 100%" />
       </div>
-      <div class="mobile">
+      <div style="background: linear-gradient(90deg, #00CCFF -63.78%, #FF00FF 148.56%);" class="mobile">
         <img src="./static/images/ct-title-mb.png" style="max-width: 100%; width: 100%" />
       </div>
       <img src="./static/images/ct-banner.png" style="max-width: 100%; width: 100%" />
       <img src="./static/images/thao-luan.png" style="max-width: 100%; width: 100%" class="pc"/>
-      <img class="mobile" src="./static/images/chuong-trinh-1-mb.png" style="width: 100%;height: auto;" /> 
-      <img class="mobile" src="./static/images/chuong-trinh-2-mb.png" style="width: 100%;height: auto;" />
+      <img class="mobile" src="./static/images/chuong-trinh-1-mb.svg" style="width: 100%;height: auto;" /> 
+      <img class="mobile" src="./static/images/chuong-trinh-2-mb.svg" style="width: 100%;height: auto;" />
        <a class="mobile" style="padding-bottom: 32px;" onclick="showChuongTrinh(2)"><i>(Xem chi tiết)</i></a>
-      <img class="mobile" src="./static/images/chuong-trinh-3-mb.png" style="width: 100%;height: auto;" /> 
+      <img class="mobile" src="./static/images/chuong-trinh-3-mb.svg" style="width: 100%;height: auto;" /> 
       <a class="mobile" style="padding-bottom: 32px;" onclick="showChuongTrinh(3)"><i>(Xem chi tiết)</i></a>
-      <img class="mobile" src="./static/images/chuong-trinh-4-mb.png" style="width: 100%;height: auto;" /> 
-      <img class="mobile" src="./static/images/chuong-trinh-5-mb.png" style="width: 100%;height: auto;" /> 
+      <img class="mobile" src="./static/images/chuong-trinh-4-mb.svg" style="width: 100%;height: auto;" /> 
+      <img class="mobile" src="./static/images/chuong-trinh-5-mb.svg" style="width: 100%;height: auto;" /> 
       <a class="mobile" style="padding-bottom: 32px;" onclick="showChuongTrinh(5)"><i>(Xem chi tiết)</i></a>
-      <img class="mobile" src="./static/images/chuong-trinh-6-mb.png" style="width: 100%;height: auto;" /> 
+      <img class="mobile" src="./static/images/chuong-trinh-6-mb.svg" style="width: 100%;height: auto;" /> 
       <div id="dien-gia" class="dien-gia">
         <div class="pc" style="display: flex;">
           <img  src="./static/images/dien-title2.png" style="max-width: 100%; margin: auto;" class="title" />
