--- a/index.html
+++ b/index.html
@@ -525,9 +525,10 @@
       </div>
       <div class="dien-gia-list mobile">
         <div class="container">
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-6">
               <img src="./static/images/dien-gia-1-mb.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+              <p>abc</p>
             </div>
             <div class="col-6">
               <img src="./static/images/dien-gia-2-mb.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(2)" />
@@ -552,6 +553,35 @@
             </div>
             <div class="col-6">
               <img src="./static/images/dien-gia-9-mb.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(9)" />
+            </div>
+          </div> -->
+          <div class="row">
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+            </div>
+            <div class="col-6">
+              <img src="./static/images/dien-gia-5-mb.svg" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
             </div>
           </div>
         </div>
