--- a/index-en.html
+++ b/index-en.html
@@ -225,7 +225,6 @@
           <div class="booking-info">
             <a href="#booking" class="menu-link ">thông tin vé</a>
           </div>
-         
         </div>
         <nav style="margin: 0;" class="navbar navbar-dark ">
           <img class="mobile" src="./static/images/icon.svg" style="max-width: 100%;margin-right: auto;padding-left: 24px;" />
@@ -503,34 +502,34 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-1-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
+              <img src="./static/images/dien-gia-1-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(1)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-2-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(2)" />
+              <img src="./static/images/dien-gia-2-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(2)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-3-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(3)" />
+              <img src="./static/images/dien-gia-3-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(3)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-4-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(4)" />
+              <img src="./static/images/dien-gia-4-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(4)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-5-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(5)" />
+              <img src="./static/images/dien-gia-5-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(5)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-6-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(6)" />
+              <img src="./static/images/dien-gia-6-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(6)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-7-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(7)" />
+              <img src="./static/images/dien-gia-7-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(7)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-8-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(8)" />
+              <img src="./static/images/dien-gia-8-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(8)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-9-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(9)" />
+              <img src="./static/images/dien-gia-9-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(9)" />
             </div>
             <div class="col-sm-3 col-xs-6">
-              <img src="./static/images/dien-gia-10-pc.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
+              <img src="./static/images/dien-gia-10-pc-en.png" style="max-width: 100%; width: 100%;cursor: grab;" onclick="show(10)" />
             </div>
           </div>
         </div>
@@ -713,11 +712,11 @@
     var modalImg = document.getElementById("img01");
     function show(id) {
       modal.style.display = "block";
-      modalImg.src = "./static/images/dien-gia-" + id + "-chi-tiet.png";
+      modalImg.src = "./static/images/dien-gia-" + id + "-chi-tiet-en.png";
     }
     function showChuongTrinh(id) {
       modal.style.display = "block";
-      modalImg.src = "./static/images/chuong-trinh-" + id + "-chi-tiet.png";
+      modalImg.src = "./static/images/chuong-trinh-" + id + "-chi-tiet-en.png";
     }
     // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
