init en version

--- a/index-en.html
+++ b/index-en.html
@@ -196,8 +196,12 @@
             <a href="#booking" class="menu-link ">thông tin vé</a>
           </div>
           <div class="language" style="display: flex; border-radius: 8px; padding-left: 55px;">
-            <img class="pc" src="./static/images/btnvi.png" style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
-            <img class="pc" src="./static/images/btnus.png" style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+            <a href="./index.html">
+                <img class="pc" src="./static/images/btnvi.png" style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
+            </a>
+            <a href="./index-en.html">
+                <img class="pc" src="./static/images/btnus.png" style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+            </a>
           </div>
         </div>
       </div>
@@ -230,10 +234,14 @@
           <img class="mobile" src="./static/images/icon.svg" style="max-width: 100%;margin-right: auto;padding-left: 24px;" />
           <div class="languages" style="display: flex; border-radius: 8px; padding-right: 24px;">
             <div class="inline-block">
-              <img class="lang vi" src="./static/images/btnvimb.png" style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
+                <a href="./index.html">
+                    <img class="lang vi" src="./static/images/btnvimb.png" style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
+                </a>
             </div>
             <div class="inline-block">
-              <img class="lang us" src="./static/images/btnenmb.png" style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+                <a href="./index-en.html" class="">
+                    <img class="lang us" src="./static/images/btnenmb.png" style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+                </a>
             </div>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -253,48 +261,32 @@
       <div class="container">
         <img class="gt-btn pc" src="./static/images/menu-gt-112.png" style="max-width: 100%;" alt="">
         <div class="gt-content">
-          <p>
-            Bất chấp những bất ổn của kinh tế toàn cầu, Việt Nam vẫn nổi lên là điểm sáng với mức tăng trưởng GDP năm
-            2022
-            được dự báo có thể đạt 7,5%, lạm phát được kiểm soát, chuỗi cung ứng phục hồi mạnh mẽ, giải ngân vốn đầu tư
-            nước ngoài trong 8 tháng đầu năm đạt mức kỷ lục 12,8 tỷ USD….
-          </p>
-          <p>
-            Cùng với sự phục hồi kinh tế mạnh mẽ, hoạt động M&A tại Việt Nam được dự báo sẽ sôi động trở lại trong thời
-            gian tới, nhất là trong bối cảnh nguồn vốn trong nước bị thắt chặt, nhiều doanh nghiệp phải tái cấu trúc,
-            bán
-            bớt tài sản, kêu gọi đầu tư do sức ép về tài chính.
-          </p>
-          <p>
-            Với chủ đề <b style="font-weight: bold;">“Kích hoạt những cơ hội mới”</b>, Diễn đàn M&A Việt Nam lần thứ 14
-            – năm 2022, sự kiện thường niên uy
-            tín về hoạt động mua bán- sáp nhập doanh nghiệp và kết nối đầu tư tại Việt Nam do Báo Đầu tư tổ chức dưới sự
-            bảo trợ của Bộ Kế hoạch và Đầu tư, sẽ thảo luận chuyên sâu các cơ hội khi hoạt động M&A tại Việt Nam tiếp
-            tục
-            thu hút dòng tiền từ các doanh nghiệp có tiềm lực tài chính mạnh và các quỹ đầu tư nước ngoài, đặc biệt là
-            các
-            quỹ đầu tư tư nhân có lượng tiền dự trữ dồi dào.
-          </p>
-
-        </div>
+            <p>
+              Despite the uncertainties of the global economy, Vietnam remains a bright spot with GDP growth forecasted to reach 7.5 per cent in 2022, inflation under control, the supply chain recovering strongly, and disbursement of foreign investment capital in the first eight months of the year reached a record of $12.8 billion.
+            </p>
+            <p>
+              Along with the strong economic recovery, M&A activities in Vietnam are forecasted to be vibrant again in the near future, especially in the context of domestic capital flow is tightened, many businesses have to restructure, sell assets, and call for investment due to financial pressure.
+            </p>
+            <p>
+              Themed <b style="font-weight: bold;">"Igniting new opportunities"</b>, the 14th Vietnam M&A Forum 2022, a prestigious annual event on business mergers and acquisitions and investment connections in Vietnam, organised by Vietnam Investment Review under the auspices of the Ministry of Planning and Investment, will delve into M&A opportunities as Vietnam’s M&A market continue to attract cash flow from businesses with strong financial sources and foreign investment funds, especially private equity ones which are providing a plentiful source of deal-making capital. 
+            </p>
+  
+          </div>
         <img class="diem-nhan-btn pc" src="./static/images/diem-nhan.svg" style="max-width: 100%; width: 100%" />
         <div class="pc">
           <div class="diem-nhan-content ">
             <div style="padding-top: 17px;">
               <span style="color: #FF6600;font-size: 22px;">
-                Diễn đàn M&A Việt Nam 2022 là nơi:
+                Benefits of participation:
               </span>
               <p>
-                . <span style="color: #FF6600; transform: uppercase;">Gặp gỡ</span> các lãnh đạo cao cấp của giới đầu tư
-                và kinh doanh tại Việt Nam, các nhà đầu tư quốc tế đến từ Nhật Bản, Hàn Quốc, Mỹ, châu Âu và Đông Nam Á.
+                . <span style="color: #FF6600; transform: uppercase;">Meeting</span> enior executives of the Vietnamese business circle and those from Japan, the Republic of Korea, the US, Europe, and Southeast Asia.
               </p>
               <p>
-                . <span style="color: #FF6600; transform: uppercase;">Kết nối</span> đối tác, chia sẻ các cơ hội M&A và
-                hợp tác chiến lược.
+                . <span style="color: #FF6600; transform: uppercase;">Connecting</span> with potential partners and share opportunities in M&A and strategic co-operation.
               </p>
               <p>
-                . <span style="color: #FF6600; transform: uppercase;">Trao đổi kinh nghiệm</span> M&A tại thị<br> trường Việt
-                Nam, gặp gỡ những người trong cuộc của những thương vụ và nhà tư vấn<br> tiêu biểu nhất giai đoạn 2021- 2022.
+                . <span style="color: #FF6600; transform: uppercase;">TExchanging</span> M&A experience<br> n Vietnam and meet the insiders of the most outstanding deals and advisory firms of 2021-2022.
               </p>
             </div>
             <div style="padding-right: 10px;">
@@ -453,19 +445,16 @@
         <!-- end--slide -->
         <div class="diem-nhan-mobile container" style="padding-top: 24px;">
           <span style="color: #FF6600;font-size: 24px;">
-            Diễn đàn M&A Việt Nam 2022 là nơi:
+            Benefits of participation:
           </span>
           <p>
-            . <span style="color: #FF6600; transform: uppercase;">Gặp gỡ</span> các lãnh đạo cao cấp của giới đầu tư
-            và kinh doanh tại Việt Nam, các nhà đầu tư quốc tế đến từ Nhật Bản, Hàn Quốc, Mỹ, châu Âu và Đông Nam Á.
+            . <span style="color: #FF6600; transform: uppercase;">Meeting</span>senior executives of the Vietnamese business circle and those from Japan, the Republic of Korea, the US, Europe, and Southeast Asia.
           </p>
           <p>
-            . <span style="color: #FF6600; transform: uppercase;">Kết nối</span> đối tác, chia sẻ các cơ hội M&A và
-            hợp tác chiến lược.
+            . <span style="color: #FF6600; transform: uppercase;">Connecting</span> with potential partners and share opportunities in M&A and strategic co-operation.
           </p>
           <p style="margin: 0; padding-bottom: 24px;">
-            . <span style="color: #FF6600; transform: uppercase;">Trao đổi kinh nghiệm</span> M&A tại thị trường Việt
-            Nam, gặp gỡ những người trong cuộc của những thương vụ và nhà tư vấn tiêu biểu nhất giai đoạn 2021- 2022.
+            . <span style="color: #FF6600; transform: uppercase;">Exchanging</span> M&A experience in Vietnam and meet the insiders of the most outstanding deals and advisory firms of 2021-2022.
           </p>
         </div>
       </div>
@@ -670,10 +659,10 @@
               <p>TicketBox Co. Ltd. © 2016</p>
               <div class="languages">
                 <div class="inline-block">
-                  <a href="#" class="lang vi"></a>
+                  <a href="./index.html" class="lang vi"></a>
                 </div>
                 <div class="inline-block">
-                  <a href="#" class="lang en"></a>
+                  <a href="./index-en.html" class="lang en"></a>
                 </div>
               </div>
             </div>
