--- a/index.html
+++ b/index.html
@@ -231,10 +231,14 @@
           <img class="mobile" src="./static/images/icon.svg" style="max-width: 100%;margin-right: auto;padding-left: 24px;" />
           <div class="languages" style="display: flex; border-radius: 8px; padding-right: 24px;">
             <div class="inline-block">
-              <img class="lang vi" src="./static/images/btnvimb.png" style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
+                <a href="./index.html">
+                    <img class="lang vi" src="./static/images/btnvimb.png" style="max-width: 100%; width: 100%; border-radius: 8px 0px 0px 8px;" />
+                </a>
             </div>
             <div class="inline-block">
-              <img class="lang us" src="./static/images/btnenmb.png" style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+                <a href="./index-en.html" class="">
+                    <img class="lang us" src="./static/images/btnenmb.png" style="max-width: 100%; width: 100%; border-radius: 0px 8px 8px 0px;" />
+                </a>
             </div>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
