--- a/index-en.html
+++ b/index-en.html
@@ -182,10 +182,10 @@
         <div class="header-container">
           <ul class="menu">
             <li class="menu-item">
-              <a href="#gt" class="menu-link">giới thiệu</a>
+              <a href="#gt" class="menu-link">about</a>
             </li>
             <li class="menu-item">
-              <a href="#chuong-trinh" class="menu-link">chương trình</a>
+              <a href="#chuong-trinh" class="menu-link">program</a>
             </li>
             <li class="menu-item">
               <a href="#dien-gia" class="menu-link">diễn giả</a>
@@ -211,7 +211,7 @@
           <div style="padding-left: 15px;" >
             
               <div >
-                <a href="#gt" class="menu-link">giới thiệu</a>
+                <a href="#gt" class="menu-link">about</a>
               </div>
               
               <div>
@@ -252,7 +252,7 @@
       </div>
     </header>
     <section class="banner">
-      <a href="#booking"  class="booking-btn">MỜI ĐẶT VÉ TẠI ĐÂY</a>
+      <a href="#booking"  class="booking-btn">BOOK NOW</a>
       <img class="pc" src="./static/images/Header.svg" style="max-width: 100%; width: 100%" />
       <img class="mobile" src="./static/images/banner-mobile.svg" style="width: 100%;height: auto;" />
     </section>
