--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                   </div> 
                   <br>
                   <div style="line-height: 1.2;font-family: 'Roboto';" class="cv-dg">
-                    <div>Phó tổng giám đốc </div>
+                    <div>Phó Tổng giám đốc </div>
                     <div>Công ty CP Gamuda Land (HCMC)</div>
                   </div>      
                 </div>
